<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.birddevstudios.thefastforecast.fragments.CitySelectionFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="10dp">


        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-680dp"
            android:background="@drawable/weather_fragment_header_curve"/>

        <LinearLayout
            android:id="@+id/ll_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tv_cancel_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/cancel_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/tv_cancel"
                android:textSize="17sp"
                android:textColor="@color/sky_dark_blue"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_done"
                android:textSize="17sp"
                android:textColor="@color/sky_dark_blue"/>

            <TextView
                android:id="@+id/tv_done_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/done_icon" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:textColor="@color/blue_text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/tv_select_city"/>

    </RelativeLayout>

    <SearchView
        android:id="@+id/sv_city_list"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:queryHint="Search"
        android:background="@drawable/listview_weather_item_background">


    </SearchView>


    <ListView
        android:id="@+id/lv_city_selection_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fastScrollEnabled="true"
        android:dividerHeight="20dp"
        android:divider="@android:color/transparent">

    </ListView>



</LinearLayout>
