<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mycompany.thefastforecast.fragments.WeatherFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="20dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-680dp"
            android:background="@drawable/weather_fragment_header_curve"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:textColor="@color/blue_text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/tv_cities_header"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_empty_city_list"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:text="@string/tv_empty_city_list"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAlignment="gravity"/>


    <ListView
        android:id="@+id/lv_city_weather"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:dividerHeight="20dp"
        android:divider="@android:color/transparent">

    </ListView>


    <Button
        android:id="@+id/btn_add_city"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/tv_add_city"
        android:textColor="@color/blue_text"
        android:textSize="20sp"
        android:background="@drawable/listview_weather_item_background"/>


</LinearLayout>
